--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.17.2",
     "ejs": "^2.5.7",
     "express": "^4.15.4",
+    "express-flash-messages": "^0.1.1",
     "express-session": "^1.15.5",
     "express-validator": "^3.2.1",
     "mongoose": "^4.11.6",
